# floquet-simulations

./: .gitignore  BandStructure_Hubbard Parameters_39K.nb  ForGeorgia.nb  HF_analysis.py  HF_data_generator.py  HF_data_generatory.py  HF_plot.py  Latt Simulation.nb  README.md  Test_Mathematica.nb  analysis_gaus0.csv  analysis_gaus_complex.csv  debug.py  density_evolution.py  hamiltonians.py  latt_sim_g.nb  plane_wave_diagonalisation.py  plot_format.py  push_instruct.sh  push_instruct.txt  pyproject.toml  simulation.py  time_dependent_potentials.nb
asymptote/: 2D_setup_large.asy  LotsOfLinks.asy  SSHDiagram.asy  SSH_shake_nf.asy  SingleSiteShake.asy  SingleTunnellingMod.asy  TriangleShake.asy  floquet_tweezer.asy  floquet_tweezer_2x2.asy  floquet_tweezer_2x3.asy  triangle_shake_nf.asy
data/: A35-w9p6-phpio3-mathematica-data.csv  A35-w9p6-phpio3-mathematica-info.csv  A35-w9p6-phpio7-G-mathematica-data.csv  A35-w9p6-phpio7-G-mathematica-info.csv  A35-w9p6-phpio7-mathematica-data.csv  A35-w9p6-phpio7-mathematica-info.csv  analysis-G - Copy (2).csv  analysis-G - Copy (3).csv  analysis-G - Copy (5).csv  analysis-G - Copy.csv  analysis-G-FullHamiltonian.csv  analysis-G-N6.csv  analysis-G-SSDF.csv  analysis-G-mat-35.csv  analysis-G-mat-lin-35.csv  analysis-G-mat.csv  analysis-G-mathematica.csv  analysis-G-newelements - Copy.csv  analysis-G-newelements-1.csv  analysis-G-newelements-2 - Copy.csv  analysis-G-newelements.csv  analysis-G-oldF.csv  analysis-G-py-mbqd.csv  analysis-G-py-rtol1e-9-2.csv  analysis-G-py-rtol1e-9-SS.csv  analysis-G-py-rtol1e-9-pio7.csv  analysis-G-py.csv  (+3 more)
(+393 files in other folders)
