[tool.poetry]
name = "floquet_simulations"
version = "0.1.0"
description = ""
authors = ["gnixon"]
readme = "README.md"
packages = [{include = "floquet_simulations", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
